# cs-researcher

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
src/: main.rs
src/layers/: discovery.rs  download.rs  legality.rs  mod.rs  resolution.rs
