[package]
name = "cs-researcher"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
dotenvy = "0.15.7"
futures-util = "0.3.31"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strsim = "0.11.1"
tokio = { version = "1.49.0", features = ["full"] }
url = "=2.5.2"
urlencoding = "2.1.3"
