[package]
name = "cs-researcher"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
dotenvy = "0.15.7"
futures-util = "0.3.31"
governor = "0.10.4"
nonzero_ext = "0.3.0"
quick-xml = { version = "0.39.0", features = ["escape-html", "serde", "serialize"] }
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strsim = "0.11.1"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = "=2.5.2"
urlencoding = "2.1.3"
